// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheNavigationDrawer render TheNavigationDrawer with route /bydel/gamleoslo correctly 1`] = `
<aside
  class="navbar"
>
  <a
    class="logo-link router-link-active"
    href="/"
  >
    <oslo-logo-stub
      aria-label="Oslo kommune logo"
      class="oslo__logo"
    />
  </a>
   
  <button
    class="selectedTopic"
  >
    Bydel Gamle Oslo
  </button>
   
  <a
    class="vue-skip-to"
    href="#main"
  >
    Skip to main content
  </a>
   
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="state-toggle"
    >
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link router-link-exact-active router-link-active state-toggle__link--active"
          href="/bydel/gamleoslo"
        >
          Utforsk
          <br />
          en bydel
        </a>
      </li>
       
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link"
          href="/bydel/alle"
        >
          Sammenlign bydeler
        </a>
      </li>
    </ul>
     
    <header
      class="navigation-header"
    >
      <span>
        
        Velg en bydel
      
      </span>
    </header>
     
    <ul
      class="navigation-list"
    >
      <li
        class="navigation-link navigation-link--active"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </li>
    </ul>
  </nav>
</aside>
`;

exports[`TheNavigationDrawer renders TheNavigationDrawer correctly 1`] = `
<aside
  class="navbar"
>
  <a
    class="logo-link router-link-active"
    href="/"
  >
    <oslo-logo-stub
      aria-label="Oslo kommune logo"
      class="oslo__logo"
    />
  </a>
   
  <button
    class="selectedTopic"
  >
    - Velg byområde -
  </button>
   
  <a
    class="vue-skip-to"
    href="#main"
  >
    Skip to main content
  </a>
   
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="state-toggle"
    >
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link state-toggle__link--active"
          href="/bydel/gamleoslo"
        >
          Utforsk
          <br />
          en bydel
        </a>
      </li>
       
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link"
          href="/bydel/alle"
        >
          Sammenlign bydeler
        </a>
      </li>
    </ul>
     
    <header
      class="navigation-header"
    >
      <span>
        
        Velg en bydel
      
      </span>
    </header>
     
    <ul
      class="navigation-list"
    >
      <li
        class="navigation-link navigation-link--active"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <!---->
         
        <!---->
         
        <a
          class="navigation-link__label"
          href="/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </li>
    </ul>
  </nav>
</aside>
`;
